--- a/composer.json
+++ b/composer.json
@@ -81,6 +81,13 @@
             "php bin/console doctrine:fixtures:load -n",
             "php bin/console cache:clear"
         ],
+        "prepare-test": [
+            "php bin/console doctrine:database:drop --if-exists -f --env=test",
+            "php bin/console doctrine:database:create --env=test",
+            "php bin/console doctrine:schema:update -f --env=test",
+            "php bin/console doctrine:fixtures:load -n --env=test",
+            "php bin/console cache:clear --env=test"
+        ],
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
@@ -103,8 +110,12 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.4.*",
+        "symfony/css-selector": "5.4.*",
         "symfony/debug-bundle": "5.4.*",
         "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^6.0",
         "symfony/stopwatch": "5.4.*",
         "symfony/web-profiler-bundle": "5.4.*"
     }
